--- a/UI/index.html
+++ b/UI/index.html
@@ -1,10 +1,179 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>InWorld</title>
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
+    <header>
+        <div class="logo">
+            <a href="#">
+                <img src="./assets/icons/Logo.svg" alt="Logo">
+                <h1>InWorld</h1>
+            </a>
+        </div>
+        <div class="nav-bar">
+            <span>Name_Surname</span>
+            <a href="#"><img src="./assets/icons/Account.svg" alt="Account"></a>
+            <a href="#"><img src="./assets/icons/Logout.svg" alt="Logout"></a>
+        </div>
+    </header>
+    <main>
+        <div class="main-content">
+            <div class="filter">
+                <div class="dropdown">
+                    <img src="./assets/icons/Filter.svg" alt="Filter">
+                    <div class="dropdown-content">
+                        <input class="date" type="date">
+                        <input class="private" type="checkbox">
+                        <label for="private">show only private</label>
+                    </div>
+                </div>
+                <div class="account-list">
+                    <img src="./assets/icons/Arrow_back.svg" alt="Arrow_back">
+                    <div class="account">
+                        <img src="./assets/icons/SmallAccount.svg" alt="SmallAccount">
+                    </div>
+                    <div class="account">
+                        <img src="./assets/icons/SmallAccount.svg" alt="SmallAccount">
+                    </div>
+                    <div class="account">
+                        <img src="./assets/icons/SmallAccount.svg" alt="SmallAccount">
+                    </div>
+                    <div class="account">
+                        <img src="./assets/icons/SmallAccount.svg" alt="SmallAccount">
+                    </div>
+                    <div class="account">
+                        <img src="./assets/icons/SmallAccount.svg" alt="SmallAccount">
+                    </div>
+                    <div class="account">
+                        <img src="./assets/icons/SmallAccount.svg" alt="SmallAccount">
+                    </div>
+                    <div class="account">
+                        <img src="./assets/icons/SmallAccount.svg" alt="SmallAccount">
+                    </div>
+                    <div class="account">
+                        <img src="./assets/icons/SmallAccount.svg" alt="SmallAccount">
+                    </div>
+                    <img src="./assets/icons/Arrow_forward.svg" alt="Arrow_forward">
+                </div>
+                <div class="search-input">
+                    <input type="text" placeholder="Search by messages...">
+                    <img src="./assets/icons/Search.svg" alt="Search">
+                </div>
+            </div>
+            <div class="messages">
+                <button class="load">Load More</button>
+                <div class="message-container">
+                    <div><img src="./assets/icons/ChatAccount.svg" alt="Account"></div>
+                    <div>
+                        <span>Stan Marsh</span>
+                        <p>
+                            You guys, you guys! Chef is going away.
+                        </p>
+                    </div>
+                </div>
+                <div class="message-container">
+                    <div><img src="./assets/icons/ChatAccount.svg" alt="Account"></div>
+                    <div>
+                        <span>Kyle Broflovski</span>
+                        <p>
+                            Going away? For how long?
+                        </p>
+                    </div>
+                </div>
+                <div class="message-container">
+                    <div><img src="./assets/icons/ChatAccount.svg" alt="Account"></div>
+                    <div>
+                        <span>Stan Marsh</span>
+                        <p>
+                            Forever.
+                        </p>
+                    </div>
+                </div>
+                <div class="message-container">
+                    <div><img src="./assets/icons/ChatAccount.svg" alt="Account"></div>
+                    <div>
+                        <span>Chef</span>
+                        <p>
+                            I'm sorry boys.
+                        </p>
+                    </div>
+                </div>
+                <div class="message-container">
+                    <div><img src="./assets/icons/ChatAccount.svg" alt="Account"></div>
+                    <div>
+                        <span>Stan Marsh</span>
+                        <p>
+                            Chef said he's been bored, so he joining a group called the Super Adventure Club.
+                        </p>
+                    </div>
+                </div>
+                <div class="message-container">
+                    <div><img src="./assets/icons/ChatAccount.svg" alt="Account"></div>
+                    <div>
+                        <span>Chef</span>
+                        <p>
+                            Wow!
+                        </p>
+                    </div>
+                </div>
+                <div class="message-container">
+                    <div><img src="./assets/icons/ChatAccount.svg" alt="Account"></div>
+                    <div>
+                        <span>Mrs. Garrison</span>
+                        <p>
+                            Chef?? What kind of questions do you think adventuring around the world is gonna answer?!
+                        </p>
+                    </div>
+                </div>
+                <div class="message-container">
+                    <div><img src="./assets/icons/ChatAccount.svg" alt="Account"></div>
+                    <div>
+                        <span>Chef</span>
+                        <p>
+                            What's the meaning of life? Why are we here?
+                        </p>
+                    </div>
+                </div>
+                <div class="message-container">
+                    <div><img src="./assets/icons/ChatAccount.svg" alt="Account"></div>
+                    <div>
+                        <span>Mrs. Garrison</span>
+                        <p>
+                            I hope you're making the right choice.
+                        </p>
+                    </div>
+                </div>
+                <div class="message-container">
+                    <div><img src="./assets/icons/ChatAccount.svg" alt="Account"></div>
+                    <div>
+                        <span>Eric Cartman</span>
+                        <p>
+                            I'm gonna miss him. I'm gonna miss Chef and I...and I don't know how to tell him!
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="send-input">
+                <input type="text" placeholder="Start typing your message here...">
+                <img src="./assets/icons/AttachFile.svg" alt="AttachFile">
+                <button>SEND</button>
+            </div>
+        </div>
+    </main>
+    <footer>
+        <div class="info">
+            <p>Vlad Teterev - me</p>
+            <p>vladtett2000@gmail.com - contact me:)</p>
+            <p>10.10.2020 - date of last change</p>
+        </div>
+        <p>InWorld Inc.</p>
+    </footer>
 </body>
+
 </html>
