--- a/UI/src/HomePage/HomePage.html
+++ b/UI/src/HomePage/HomePage.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>InWorld</title>
+    <title>HomePage</title>
     <link rel="stylesheet" href="HomePage.css">
 </head>
 
