fix: forgot about date

--- a/UI/src/HomePage/HomePage.html
+++ b/UI/src/HomePage/HomePage.html
@@ -76,7 +76,7 @@
                             You guys, you guys! Chef is going away.
                         </p>
                     </div>
-                    <span class="time">00:00</span>
+                    <span class="time">00:00, 22.10.2020</span>
                 </div>
                 <div class="message-container">
                     <div><img src=".././assets/icons/ChatAccount.svg" alt="Account"></div>
@@ -86,7 +86,7 @@
                             Going away? For how long?
                         </p>
                     </div>
-                    <span class="time">00:01</span>
+                    <span class="time">00:01, 22.10.2020</span>
                 </div>
                 <div class="message-container">
                     <div><img src=".././assets/icons/ChatAccount.svg" alt="Account"></div>
@@ -96,7 +96,7 @@
                             Forever.
                         </p>
                     </div>
-                    <span class="time">00:02</span>
+                    <span class="time">00:02, 22.10.2020</span>
                 </div>
                 <div class="message-container">
                     <div><img src=".././assets/icons/ChatAccount.svg" alt="Account"></div>
@@ -106,7 +106,7 @@
                             I'm sorry boys.
                         </p>
                     </div>
-                    <span class="time">00:03</span>
+                    <span class="time">00:03, 22.10.2020</span>
                 </div>
                 <div class="message-container">
                     <div><img src=".././assets/icons/ChatAccount.svg" alt="Account"></div>
@@ -116,7 +116,7 @@
                             Chef said he's been bored, so he joining a group called the Super Adventure Club.
                         </p>
                     </div>
-                    <span class="time">00:04</span>
+                    <span class="time">00:04, 22.10.2020</span>
                 </div>
                 <div class="message-container">
                     <div><img src=".././assets/icons/ChatAccount.svg" alt="Account"></div>
@@ -126,7 +126,7 @@
                             Wow!
                         </p>
                     </div>
-                    <span class="time">00:05</span>
+                    <span class="time">00:05, 22.10.2020</span>
                 </div>
                 <div class="message-container">
                     <div><img src=".././assets/icons/ChatAccount.svg" alt="Account"></div>
@@ -136,7 +136,7 @@
                             Chef?? What kind of questions do you think adventuring around the world is gonna answer?!
                         </p>
                     </div>
-                    <span class="time">00:06</span>
+                    <span class="time">00:06, 22.10.2020</span>
                 </div>
                 <div class="message-container">
                     <div><img src=".././assets/icons/ChatAccount.svg" alt="Account"></div>
@@ -146,7 +146,7 @@
                             What's the meaning of life? Why are we here?
                         </p>
                     </div>
-                    <span class="time">00:07</span>
+                    <span class="time">00:07, 22.10.2020</span>
                 </div>
                 <div class="message-container">
                     <div><img src=".././assets/icons/ChatAccount.svg" alt="Account"></div>
@@ -156,7 +156,7 @@
                             I hope you're making the right choice.
                         </p>
                     </div>
-                    <span class="time">00:08</span>
+                    <span class="time">00:08, 22.10.2020</span>
                 </div>
                 <div class="message-container">
                     <div><img src=".././assets/icons/ChatAccount.svg" alt="Account"></div>
@@ -166,7 +166,7 @@
                             I'm gonna miss him. I'm gonna miss Chef and I...and I don't know how to tell him!
                         </p>
                     </div>
-                    <span class="time">00:09</span>
+                    <span class="time">00:09, 22.10.2020</span>
                 </div>
             </div>
             <div class="send-input">
