feat: deleted slider and created another dropdown:)

--- a/UI/src/HomePage/HomePage.html
+++ b/UI/src/HomePage/HomePage.html
@@ -30,36 +30,20 @@
                     <div class="dropdown-content">
                         <input class="date" type="date">
                         <input class="private" type="checkbox">
-                        <label for="private">show only private</label>
+                        <label for="private">show only private</label> 
+                        <div class="private-message">
+                            <div class="account-list">
+                                <div class="account"></div>
+                                <div class="account"></div>
+                                <div class="account"></div>
+                                <div class="account"></div>
+                                <div class="account"></div>
+                                <div class="account"></div>
+                                <div class="account"></div>
+                                <div class="account"></div>
+                            </div>
+                        </div>
                     </div>
-                </div>
-                <div class="account-list">
-                    <img src=".././assets/icons/Arrow_back.svg" alt="Arrow_back">
-                    <div class="account">
-                        <img src=".././assets/icons/SmallAccount.svg" alt="SmallAccount">
-                    </div>
-                    <div class="account">
-                        <img src=".././assets/icons/SmallAccount.svg" alt="SmallAccount">
-                    </div>
-                    <div class="account">
-                        <img src=".././assets/icons/SmallAccount.svg" alt="SmallAccount">
-                    </div>
-                    <div class="account">
-                        <img src=".././assets/icons/SmallAccount.svg" alt="SmallAccount">
-                    </div>
-                    <div class="account">
-                        <img src=".././assets/icons/SmallAccount.svg" alt="SmallAccount">
-                    </div>
-                    <div class="account">
-                        <img src=".././assets/icons/SmallAccount.svg" alt="SmallAccount">
-                    </div>
-                    <div class="account">
-                        <img src=".././assets/icons/SmallAccount.svg" alt="SmallAccount">
-                    </div>
-                    <div class="account">
-                        <img src=".././assets/icons/SmallAccount.svg" alt="SmallAccount">
-                    </div>
-                    <img src=".././assets/icons/Arrow_forward.svg" alt="Arrow_forward">
                 </div>
                 <div class="search-input">
                     <input type="text" placeholder="Search by messages...">
