feat : created dropdown menu for private messages

--- a/UI/src/HomePage/HomePage.html
+++ b/UI/src/HomePage/HomePage.html
@@ -30,18 +30,43 @@
                     <div class="dropdown-content">
                         <input class="date" type="date">
                         <input class="private" type="checkbox">
-                        <label for="private">show only private</label> 
-                        <div class="private-message">
-                            <div class="account-list">
-                                <div class="account"></div>
-                                <div class="account"></div>
-                                <div class="account"></div>
-                                <div class="account"></div>
-                                <div class="account"></div>
-                                <div class="account"></div>
-                                <div class="account"></div>
-                                <div class="account"></div>
-                            </div>
+                        <label for="private">show only private</label>
+                    </div>
+                </div>
+                <div class="private-message">
+                    <button>Send private message <i class="arrow"></i></button>
+                    <div class="account-list">
+                        <div class="account">
+                            <img src=".././assets/icons/SmallAccount.svg" alt="">
+                            <p>Name_Surname</p>
+                        </div>
+                        <div class="account">
+                            <img src=".././assets/icons/SmallAccount.svg" alt="account">
+                            <p>Name_Surname</p>
+                        </div>
+                        <div class="account">
+                            <img src=".././assets/icons/SmallAccount.svg" alt="account">
+                            <p>Name_Surname</p>
+                        </div>
+                        <div class="account"> 
+                            <img src=".././assets/icons/SmallAccount.svg" alt="account">
+                            <p>Name_Surname</p>
+                        </div>
+                        <div class="account"> 
+                            <img src=".././assets/icons/SmallAccount.svg" alt="account">
+                            <p>Name_Surname</p>
+                        </div>
+                        <div class="account"> 
+                            <img src=".././assets/icons/SmallAccount.svg" alt="account">
+                            <p>Name_Surname</p>
+                        </div>
+                        <div class="account"> 
+                            <img src=".././assets/icons/SmallAccount.svg" alt="account">
+                            <p>Name_Surname</p>
+                        </div>
+                        <div class="account"> 
+                            <img src=".././assets/icons/SmallAccount.svg" alt="account">
+                            <p>Name_Surname</p>
                         </div>
                     </div>
                 </div>
