feat: created chatApiService chat , and load more button shows messages from server)  all that I managed

--- a/UI/index.html
+++ b/UI/index.html
@@ -79,5 +79,6 @@
 <script src="./src/views/FilterView.js"></script>
 <script src="./src/views/ActiveUsersView.js"></script>
 <script src="./src/controlers/chatController.js"></script>
+<script src="./src/controlers/chatApiService.js"></script>
 <script src="./src/controlers/events.js"></script>
 </html>
