fix : bugs and errors , complete form

--- a/UI/index.html
+++ b/UI/index.html
@@ -14,9 +14,9 @@
     <form class="login-form">
       <h2>Welcome!</h2>
       <label for="login">Login</label>
-      <input type="text" id="login">
+      <input type="text" id="log-login">
       <label for="password">Password</label>
-      <input type="password" id="password">
+      <input type="password" id="log-password">
       <a class="reg-link">For the first time InWorld?</a>
       <button class="check-in" type="submit">Enter</button>
       <p class="error-log">Incorrect Login or Password!!!</p>
@@ -24,15 +24,9 @@
     <form class="registration-form">
       <h2>Registration</h2>
       <label for="login">Login</label>
-      <input id="login" type="text">
-      <label for="phone">Phone number</label>
-      <input id="phone" type="tel">
-      <label for="mail">Mail</label>
-      <input id="mail" type="email" required>
+      <input id="login"type="text">
       <label for="password">Password</label>
       <input id="password" type="password">
-      <label for="repeat-p">Repeat Password</label>
-      <input id="repeat-p" type="password">
       <a class="log-link" href="">Already Registered?</a>
       <button class="submit-reg" type="submit">Submit</button>
     </form>
